@@ -1,5 +1,6 @@
-2011-04-22  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-04-27  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* gdbmi.py: The 'frame' command updates the frame sign.
 	* setup.py inferior_tty.py gdb.py: allow the gdb 'shell' command and
 	include inferior_tty.py in the distribution.
 	* gdb.py: Handling of the netbeans socket disconnection, closes the
